IJPL-227260 services: run dashboard: fix clear content action
(cherry picked from commit 3af1d8670bb0ac33b3565e6ea7b0d9196c4d0be9)

IJ-CR-187553

Space-RevId: 2da3b4ada97ca12096a3942ba0fa18bd74ca1a62

GitOrigin-RevId: 895d3fa7a0f463c5505f569aa41f3f95feed7081